# GenAI-CAD-CFD-Studio

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_CHECKLIST.md  DESIGN_STUDIO_README.md  ENHANCEMENT_SUMMARY.md  FEATURE_DOCS.md  FEATURE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_GENERATOR_README.md  MERGE_LOG.md  MERGE_REPORT.md  README.md  app.py  auto_merge.sh  auto_merge_output.txt  merge_log.txt  merge_script.sh  pyproject.toml  pytest.ini  qa_audit_results.md  qa_audit_script.sh  requirements.txt  run_cfd_analysis.py  setup.py  streamlit_app.py  test_imports.py  test_zoo_api.py  test_zoo_api_standalone.py  verify_installation.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml  secrets.toml.example
configs/: example.yaml
docs/: AGENT_CONFIG.md  CAD_MODEL_GENERATION.md  CFD_ANALYSIS_UI.md  PROJECT_HISTORY_UI.md
examples/: basic_usage.py  cad_generation_demo.py  cad_model_generation_demo.py  visualization_demo.py
src/: __init__.py
src/agents/: agent_registry.py
src/ai/: __init__.py  claude_skills.py  dimension_extractor.py  prompt_templates.py  sketch_interpreter.py
src/cad/: __init__.py  adam_connector.py  agent_interface.py  build123d_engine.py  cad_validator.py  image_upload_handler.py  model_generator.py  zoo_connector.py
src/cfd/: README.md  __init__.py  gmsh_mesher.py  pyfoam_wrapper.py  result_parser.py  simscale_api.py
src/geospatial/: README.md  __init__.py  layout_optimizer.py  map_processor.py  shadow_analysis.py
src/io/: __init__.py  advanced_format_handler.py  dxf_parser.py  file_converter.py  mesh_converter.py  pdf_exporter.py  step_handler.py  stl_handler.py  universal_importer.py
src/ui/: __init__.py  (+7 more)
tests/: __init__.py  test_agent_config.py  test_ai.py  test_cad.py  test_cfd.py  test_geospatial.py  test_image_upload.py  test_io.py  test_model_generator.py  test_project_history.py  test_ui_cfd.py  test_ui_design_studio.py  test_ui_file_import.py  test_ui_layout_gen.py  test_utils.py  test_visualization.py
(+44 files in other folders)
