[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-cad-cfd-studio"
version = "0.1.0"
description = "Universal AI-Powered CAD & CFD Platform - Democratizing 3D Design & Simulation with Natural Language"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "GenAI CAD CFD Studio Team"}
]
keywords = [
    "cad",
    "cfd",
    "generative-ai",
    "streamlit",
    "3d-modeling",
    "simulation",
    "build123d",
    "openfoam",
    "digital-twin"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Computer Aided Design",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/ganeshgowri-ASA/GenAI-CAD-CFD-Studio"
Repository = "https://github.com/ganeshgowri-ASA/GenAI-CAD-CFD-Studio"
Issues = "https://github.com/ganeshgowri-ASA/GenAI-CAD-CFD-Studio/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
